--- a/frontend/src/pages/home/homePage/HomePage.css
+++ b/frontend/src/pages/home/homePage/HomePage.css
@@ -2,6 +2,7 @@
 
 /* Base styles */
 .home-page {
+  margin-top: 90px;
   font-family: 'Roboto', Arial, sans-serif;
   color: #333;
   line-height: 1.6;
